alignment issues and background updates

--- a/css/flex_bootstrap.css
+++ b/css/flex_bootstrap.css
@@ -52,8 +52,12 @@ h4 {
 }
 
 .nav-link:hover{
-  transform: scale(1.5) rotate(5deg);
+  transform: scale(1.5) rotate(-2deg);
   transition: all .3s ease;
+}
+
+.nav-link{
+font-weight: bold;
 }
 
 .locations{
@@ -284,7 +288,7 @@ section:target p{
 }
 
 /*========= media queries ------------------ */
-@media (min-width: 50px) {
+@media (min-width: 0px) {
 .container{
   flex-direction: column;
 }
@@ -307,6 +311,7 @@ section:target p{
 @media (min-width: 1025px) {
 .container{
   flex-direction: row;
+  justify-content: center;
   padding: 0;
   margin:0;
 }
@@ -315,7 +320,6 @@ section:target p{
   justify-content: flex-start;
   order: -1;
   }
-
 
      .fourth{
          background: url('../img/categories/4thstreetlive_revised.png');
@@ -331,6 +335,7 @@ section:target p{
     }
     .kfec{
         background: url('../img/categories/KFEC_revised.png');
+
         box-shadow:  4px 4px black;
     }
     .headliners{
@@ -382,17 +387,14 @@ section:target p{
     .jbspeed{
         background: url('../img/categories/jbspeed_revised.png');
         box-shadow:  4px 4px black;
-        background-position: center bottom;
     }
     .waylon{
         background: url('../img/categories/waylon_revised.png');
         box-shadow:  4px 4px black;
-        background-position: center bottom;
     }
     .library{
         background: url('../img/categories/library_revised.png');
         box-shadow:  4px 4px black;
-        background-position: center bottom;
     }
 
 
